2003-08-21  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/attribute.c, magick/image.c, magick/command.c: Added
	"clippath" option for clipping named Photoshop clipping paths,
	increased precision in clipping path knots, added comments, and
	fixed a few bugs resulting from moving TraceClippingPath function
	from ImageMagick to GraphicsMagick. Still need to update some of
	the documentation.
	* magick/locale_c.h, magick/studio.h: added MagickExport to
	declaration of GetLocaleMessageFromID and moved include of
	magick/locale_c.h after declaration of MagickExport. This fixes a
	link error in dynamic, DLL version.
	* coders/locale.h: added MagickExport to prototype declaration of
	GetLocaleMessageFromID in WriteLOCALEImage.

2003-08-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/subroutines.pl (testRead): Ignore useless TIFF
	warning so that 12-bit TIFF test passes.
	* magick/constitute.c (ReadImage): Ensure that the reported image
	magic string is that of the user-specified input file rather than
	a temporary file prepared by an external delegate program.
	* magick/command.c (ImportImageCommand): Since
	DestroyExceptionInfo() now sets the destroyed exception signature
	to an invalid value, GetExceptionInfo(exception) must be invoked
	when the intention is to simply purge the exception.  This fix
	resolves an abort when executing 'gm import'.

2003-08-18  William Radcliffe  <billr@corbis.com>
	* magick\gm_messages.bin locale_c.h transform.c: Updates that
	add latest enhancments by Lars to color management code in
	ProfileImage.

2003-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* coders/wpg.c: Incorporated patch from Fojtik Jaroslav to support
	rendering embedded WMFs.

2003-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/image.c (SetImageChannelDepth): New function to transform
	the specified channel so it fits the specified modulus depth.
	* magick/blob.c (BlobToImage): Skip calling SetImageInfo() if